--- a/socket_server/package.json
+++ b/socket_server/package.json
@@ -4,14 +4,16 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon --inspect index.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "@types/socket.io": "^2.1.10",
-      "express": "^4.17.1",
-      "socket.io": "^2.3.0"
+        "@types/socket.io": "^2.1.10",
+        "express": "^4.17.1",
+        "nodemon": "^2.0.22",
+        "socket.io": "^2.3.0"
     }
-  }
+}
