--- a/.env
+++ b/.env
@@ -15,6 +15,9 @@ DB_DATABASE=graduate
 DB_USERNAME=root
 DB_PASSWORD=
 
+SOCKET_URL=127.0.0.1
+SOCKET_PORT=3000
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
