--- a/socket_server/package.json
+++ b/socket_server/package.json
@@ -12,8 +12,10 @@
     "license": "ISC",
     "dependencies": {
         "@types/socket.io": "^2.1.10",
+        "dotenv": "^16.1.3",
         "express": "^4.17.1",
         "nodemon": "^2.0.22",
-        "socket.io": "^2.3.0"
+        "socket.io": "^2.3.0",
+        "axios": "^1.1.2"
     }
 }
