--- a/socket_server/package.json
+++ b/socket_server/package.json
@@ -12,10 +12,12 @@
     "license": "ISC",
     "dependencies": {
         "@types/socket.io": "^2.1.10",
-        "dotenv": "^16.1.3",
+        "axios": "^1.1.2",
+        "dotenv": "^16.3.1",
+        "env": "^0.0.2",
         "express": "^4.17.1",
         "nodemon": "^2.0.22",
-        "socket.io": "^2.3.0",
-        "axios": "^1.1.2"
+        "process": "^0.11.10",
+        "socket.io": "^2.3.0"
     }
 }
