--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ DB_DATABASE=graduate
 DB_USERNAME=root
 DB_PASSWORD=
 
-SOCKET_URL=http://127.0.0.1:3000
+SOCKET_URL=https://realtime.pmandono.com
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
